--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "version": 2,
-  "buildCommand": false,
-  "outputDirectory": "public"
+  "buildCommand": null,
+  "outputDirectory": "public",
+  "headers": [
+    {
+      "source": "/assets/images/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
