--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "public/index.html",
   "scripts": {
     "start": "npx serve public",
-    "build": "echo 'No build required for static site'",
-    "process-images": "python scripts/process_images.py",
-    "process-videos": "python scripts/process_videos.py",
-    "optimize": "python scripts/seo_optimizer.py"
+    "dev": "npx serve public -l 3000"
   },
   "keywords": [
     "shenbury",
@@ -24,7 +21,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yourusername/shenbury.git"
+    "url": "git+https://github.com/jnodes/shenbury.git"
   },
   "devDependencies": {
     "serve": "^14.2.0"
