Add ruv-swarm integration and clean up repository
- Update .gitignore to exclude build artifacts
- Add ruv-swarm configuration and wrapper scripts
- Add Claude integration files (.claude/, CLAUDE.md)
- Repository cleaned of large build files
- Contracts built and ready for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,12 @@ Cargo.lock
 *.wasm
 cored
 cored-*
+
+# Rust build artifacts
+target/
+**/target/
+contracts/**/target/
+
+# Database files
+*.db
+*.sqlite
